--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body class="bg-gray-100 min-h-screen flex items-center justify-around">
 
-    <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-lg">
+    <div class=" p-8  w-3/4 ">
         <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Form Xuất Dữ Liệu</h2>
 
-        <form id="exportForm" class="space-y-5">
+       <div class="flex gap-x-4 ">
+         <form id="exportForm" class="bg-white space-y-5 w-1/4 rounded-2xl shadow-lg p-4">
             <!-- Token -->
             <div>
                 <label for="token" class="block text-gray-700 font-medium mb-2">Token</label>
@@ -40,14 +41,14 @@
                 </button>
             </div>
         </form>
-        <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-lg mt-4">
+        <div class="bg-white p-4 rounded-2xl shadow-lg w-3/4">
             <h1 class="text-2xl font-bold mb-4">Bảng dữ liệu bài đăng</h1>
             <div id="table-container" class="overflow-x-auto">
                 <table class="min-w-full text-sm text-left border border-gray-300">
                     <thead class="bg-gray-100">
                         <tr>
-                            <th class="border px-4 py-2">Mã pdoneId</th>
-                            <th class="border px-4 py-2">Text</th>
+                            <th class="border px-4 py-2">Mã PDONEID</th>
+                            <th class="border px-4 py-2">BÀI VIẾT</th>
                             <th class="border px-4 py-2">Video</th>
                             <th class="border px-4 py-2">Film</th>
                         </tr>
@@ -55,6 +56,7 @@
 
             </div>
         </div>
+       </div>
     </div>
 
     <script>
