--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Menu Links -->
         <div class="hidden md:flex space-x-8 items-center">
           <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Thống kê bài đăng</a>
-          <a href="oder.html" class="text-gray-700 hover:text-blue-600 font-medium">Đơn hàng mới</a>
+          <a href="order.html" class="text-gray-700 hover:text-blue-600 font-medium">Đơn hàng mới</a>
         </div>
 
         <!-- Mobile menu button -->
