--- a/order.html
+++ b/order.html
@@ -70,7 +70,7 @@ VN987654321"
                             <th class="border px-4 py-2">Tên khách hàng</th>
                             <th class="border px-4 py-2">Số điện thoại</th>
                             <th class="border px-4 py-2">Địa chỉ</th>
-                            <th class="border px-4 py-2">PTGHPTGH</th>
+                            <th class="border px-4 py-2">PTGH</th>
                             <th class="border px-4 py-2">Phí ship</th>
                             <th class="border px-4 py-2">Mô tả</th>
                             <th class="border px-4 py-2">Ghi chú</th>
