update select start time - end time

--- a/order.html
+++ b/order.html
@@ -56,9 +56,9 @@ VN987654321"
     </button>
 
     <!-- Khu vực kết quả -->
-    <div id="result" class="mt-6 text-sm text-gray-800">
+    <div id="result" class="mt-6 text-sm text-gray-800 bg-white">
                 <div class="bg-white p-4 rounded-2xl shadow-lg w-full">
-            <h1 class="text-2xl font-bold mb-4">Bảng dữ liệu bài đăng</h1>
+            <h1 class="text-2xl font-bold mb-4">Bảng dữ liệu đơn hàng</h1>
             <div id="table-container" class="overflow-x-auto">
                 <table class="min-w-full text-sm text-left border border-gray-300">
                     <thead class="bg-gray-100">
@@ -74,7 +74,6 @@ VN987654321"
                             <th class="border px-4 py-2">Phí ship</th>
                             <th class="border px-4 py-2">Mô tả</th>
                             <th class="border px-4 py-2">Ghi chú</th>
-
                         </tr>
                     </thead>
 
