--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="hidden md:flex space-x-8 items-center">
           <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Thống kê bài đăng</a>
           <a href="order.html" class="text-gray-700 hover:text-blue-600 font-medium">Đơn hàng mới</a>
+          <a href="report.html" class="text-gray-700 hover:text-blue-600 font-medium">Báo cáo hằng ngày</a>
         </div>
 
         <!-- Mobile menu button -->
