add total post in row

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <td class="border px-4 py-2 text-center">${row.text}</td>
             <td class="border px-4 py-2 text-center">${row.video}</td>
             <td class="border px-4 py-2 text-center">${row.film}</td>
-            <td class="border px-4 py-2 text-center">${row.film + row.text  + row.film}</td>
+            <td class="border px-4 py-2 text-center">${Number(row.film + row.text  + row.film)}</td>
           </tr>
         `;
             });
